<resources>
    <string name="app_name">Tech SpeakUp</string>
    <string name="app_title">TechSpeakUp</string>
    <string name="tagline">TechSpeakUP\nFinding Technical Speakers Got it All....</string>
    <string name="google_id" translatable="false">36669457617-98hkugcdatagk6c37hi3tji5pgcbupsl.apps.googleusercontent.com</string>
    <string name="home_back_btn_msg">Press back again to exit.</string>
    <string name="tv_intro_connect_heading">CONNECT</string>
    <string name="tv_intro_connect_subheading">Find Speakers near you...</string>
    <string name="tv_intro_meetup_heading">MEETUP</string>
    <string name="tv_intro_meetup_subheading">Meet Speakers...</string>
    <string name="tv_intro_network_heading">NETWORK</string>
    <string name="tv_intro_network_subheading">Grow your Connections...</string>
    <string name="tv_intro_event_heading">EVENT</string>
    <string name="tv_intro_event_subheading">Join your Community...</string>
    <string name="introscreen_skip">SKIP</string>
    <string name="introscreen_gotit">GOT IT</string>
    <string name="introscreen_next">NEXT</string>
    <string name="pie_middleeast">Middle East &amp; Africa</string>
    <string name="pie_Asia">Asia Pacific</string>
    <string name="pie_Americas">Americas</string>
    <string name="pie_Europe">Europe</string>
    <string name="pie_location">Location</string>
    <string name="home_user_display_text">Google Developer Experts</string>
    <string name="signin_text_logo">TechSpeakUp</string>
    <string name="signin_btn">SignIn</string>
    <string name="signin_btn_speaker">SignIn as Speaker</string>
    <string name="signin_btn_user">SignIn as User</string>
    <string name="loding_text">Please wait…</string>
    <string name="login_success_text">Login Successful</string>
    <string name="login_failure_text">Login Failed</string>
    <string name="unable_to_login">Unable to login with this account</string>
    <string name="details_page_setup_profile">Setup Profile</string>
    <string name="details_page_setup_profile_text">Profile Picture</string>
    <string name="details_page_image_name_text">Profile Icon</string>
    <string name="details_page_toolbar_logo_text">Profile Tolbar</string>
    <string name="details_page_image_twitter_text">Twitter Icon</string>
    <string name="details_page_image_track_text">Type Icon</string>
    <string name="details_page_email">example@gmail.com</string>
    <string name="details_page_name">Name</string>
    <string name="details_page_twitter_handle">Twitter Handle</string>
    <string name="details_page_Linkedin_handle">Linkedin Handle</string>
    <string name="details_page_next_btn">Next</string>
    <string name="details_page_change_photo">Change Profile Photo</string>
    <string name="details_page_select_track">Select Your Type</string>
    <string-array name="details_page_track_spinner">
        <item>Select Type</item>
        <item>Speaker</item>
        <item>User</item>
    </string-array>
    <string name="user_name_empty_error">Enter your name</string>
    <string name="select_your_Type">Select Your Track</string>
    <string name="user_image_empty">Select a profile photo</string>
    <string name="empty_type_list">No Type for the selected Filter</string>
    <string name="something_went_wrong">Something went wrong. Please try again</string>
    <string name="error_uploading_picture">Error while uploading profile picture. Please try again later.</string>
    <string name="profile_saved_successfully">Logged in successfully</string>
    <string name="navigation_speaker_profile">Profile</string>
    <string name="navigation_speaker_follower">Follower</string>
    <string name="navigation_user">Speaker</string>
    <string name="navigation_speaker_notification">Notification</string>
    <string name="navigation_speaker_event">Event</string>
    <string name="title_activity_navigation_drawer">NavigationDrawerActivity</string>
    <string name="welcome">Welcome .......</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="fab_notification">New Notification</string>
    <string name="navigation_drawer_edit_profile">Edit Profile</string>
    <string name="navigation_drawer_logout">Logout</string>
    <string name="speaker_profile_profiletext">Profile</string>
    <string name="speaker_profile_events">Events</string>
    <string name="speaker_profile_events_val">0</string>
    <string name="speaker_profile_rate">Rate</string>
    <string name="speaker_profile_rate_val">9.5</string>
    <string name="speaker_profile_followers">Followers</string>
    <string name="speaker_profile_followers_val">1205</string>
    <string name="speaker_profile_wiliam_snoe">Wiliam Snoe</string>
    <string name="speaker_profile_android_developer">Android developer</string>
    <string name="speaker_profile_peru">Peru</string>
    <string name="speaker_profile_website_text">www.speakup.com</string>
    <string name="speaker_profile_about_me">About Me</string>
    <string name="speaker_profile_event_details">EventDetails</string>
    <string name="speaker_profile_about_me_text">Lorem ipsum dolor sit amet, ei per eirmod aliquam scriptorem, quaestio perpetua his in, sed ea suas aliquam adolescens. Tale putent at nec, his graecis eleifend ex. Eu eam eligendi repudiare, mutat sensibus mnesarchum per te. Quo altera semper aliquando ea.</string>
    <string name="speaker_profile_profileimage">profileimage</string>
    <string name="speaker_profile_speakup">speakup</string>
    <string name="speaker_profile_twiiter_image">twitter_image</string>
    <string name="speaker_profile_map_image">map_image</string>
    <string name="speaker_profile_link_map">link_map</string>
    <string name="speaker_profile_dialog_title">Profile</string>
    <string name="speaker_profile_dialog_message">Please Update your Profile, before proceeding to other sections of the App.</string>
    <string name="speaker_editprofile_profile">Edit Profile</string>
    <string name="speaker_editprofile_name">Name</string>
    <string name="speaker_editprofile_location">City,Country</string>
    <string name="speaker_editprofile_job">Job</string>
    <string name="speaker_editprofile_twitter">Twitter</string>
    <string name="speaker_editprofile_linkedin">Linkedin</string>
    <string name="speaker_editprofile_website">Website</string>
    <string name="speaker_editprofile_aboutme">About Me</string>
    <string name="speaker_editprofile_eventcount">How many events have you attended?</string>
    <string name="speaker_editprofile_eventdetails">Event Details</string>
    <string name="speaker_editprofile_submit">Submit</string>
    <string name="speaker_editprofile_saved_successfully">Data Saved successfully</string>
    <string name="speaker_event_profile">Events</string>
    <string name="speaker_event_details">Events Details</string>
    <string name="tv_eventdetail_eventname">Flutter Event I/O</string>
    <string name="event_details_eventsubTitle">Flutter Event I/O</string>
    <string name="event_details_eventdate">15th Jan 2019</string>
    <string name="event_details_eventlocation">Bangalore,India</string>
    <string name="event_details_eventdetails">The first version of Flutter was known as and ran on the Android operating system. It was unveiled at the 2015 Dart developer summit with the stated intent of being able to render consistently at 120 frames per second.[6] During the keynote of Google Developer Days in Shanghai, Google announced Flutter Release Preview 2 which is the last big release before Flutter 1.0.</string>
    <string name="follower_dialog_title">Follower</string>
    <string name="follower_dialog_message">Currently you do not have any followers.</string>
    <string name="no_internet_title">No Internet Connection</string>
    <string name="no_internet_message">You need to have Mobile Data or wifi to access this. Press ok to Exit</string>
    <string name="no_interent_okbutton">ok</string>
    <string name="no_internet_connection">No internet Connection</string>
    <string name="sign_out_title">Are you sure?</string>
    <string name="sign_out_ok">Yes</string>
    <string name="sign_out_cancel">Cancel</string>
    <string name="sign_out_message">This will sign you out from this device</string>
    <string name="sucess_title">Success</string>
    <string name="sucess_cancel">Ok</string>
    <string name="sucess_message">Changes are saved successfully</string>
    <string name="speaker_followers_profile">Followers</string>
    <string name="tv_follower_job">Android Developer</string>
    <string name="tv_follower_name">Rahul Kumar</string>
    <string name="new_notification_profile">Notification</string>
    <string name="tv_notification_follower_name">Rahul Kumar</string>
    <string name="tv_notification_follower_designation">Android Developer</string>
    <string name="tv_notification_follower_location">Bangalore,India</string>
    <string name="tv_notification_follower_arrow">Next Page</string>
    <string name="et_notification_send_msg">Type the Message</string>
    <string name="et_notification_send_name">Rahul Kumar</string>
    <string name="et_notification_send_button">Send</string>
    <string name="notification_dialog_title">Notifications</string>
    <string name="notification_dialog_message">Currently you do not have any Notifications.</string>
    <string name="tv_notification_msg">Hello, this is a message</string>
    <string name="tv_notification_timestamp">2018-11-13T17:47:48Z</string>
    <string name="send_notification_btn">Send</string>
    <string name="send_notification_sent_message">message sent</string>
    <string name="send_notification_message_enter">enter a message</string>
    <string name="send_notification_new_message">new message...</string>
    <string name="iv_delete_notification">Delete</string>
    <string name="tv_delete_message">Do you want to delete the message?</string>
    <string name="default_notification_channel_id" translatable="false">codesqills.org.techspeakup.ui.notificationsend.default_notification_channel_id</string>
    <string name="data_type">data_type</string>
    <string name="direct_message">direct_message</string>
    <string name="data_message">message</string>
    <string name="data_title">title</string>
    <string name="data_message_id">message_id</string>
    <string name="intent_user_id">intent_user_id</string>
    <string name="intent_message_id">intent_message_id</string>
    <string name="dialog_message">dialog_message</string>
    <string name="dialog_message_speaker">Do you want to Follow, confirm.</string>
    <string name="dialog_message_ok">Ok</string>
    <string name="rate_message">Rate</string>
    <string name="notification_tab_speaker">Speaker</string>
    <string name="notification_tab_search">Search</string>
    <string name="notification_tab_event">Event</string>
    <string name="title_activity_maps">Map</string>
    <string name="user_location_title">My Location</string>
    <string name="user_permission_denied">Permission Denied...</string>
    <string name="gps_message">GPS is settings</string>
    <string name="gps_enabled_message">GPS is not enabled. Do you want to go to settings menu?</string>
    <string name="speaker_title">Speakers</string>
    <string name="tv_speaker_name">Rahul_Sharma</string>
    <string name="tv_speaker_job">Anroid Developer</string>
    <string name="speaker_rate_success">Rating submitted successfully</string>
    <string name="speaker_map_toolbar_title">Speakers/Users Map</string>
    <string name="internet_no">No Interent Connection</string>
    <string name="internet_refresh">Refresh</string>
    <string name="star_details">star</string>
    <string name="follow_details">follow</string>
</resources>