<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_speaker_profile"
        android:checked="true"
        android:icon="@drawable/menu_profile"
        android:title="@string/navigation_speaker_profile" />

    <item
        android:id="@+id/navigation_speaker_follower"
        android:icon="@drawable/menu_follower"
        android:title="@string/navigation_speaker_follower" />

    <item
        android:id="@+id/navigation_speaker_speakers"
        android:icon="@drawable/menu_speaker"
        android:title="@string/navigation_user" />
    <item
        android:id="@+id/navigation_speaker_notification"
        android:icon="@drawable/menu_notification"
        android:title="@string/navigation_speaker_notification" />
    <item
        android:id="@+id/navigation_speaker_event"
        android:icon="@drawable/menu_event"
        android:title="@string/navigation_speaker_event" />

</menu>