<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginEnd="8dp"
    android:layout_marginStart="8dp"
    app:cardBackgroundColor="@color/colorPrimary"
    app:cardCornerRadius="2dp"
    app:cardElevation="2dp"
    app:cardMaxElevation="2dp"
    app:cardUseCompatPadding="true">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">

        <TextView
            android:id="@+id/tv_notification_followers_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:textColor="@android:color/white"
            android:textSize="24sp"
            app:layout_constraintEnd_toStartOf="@+id/tv_notification_followers_arrow"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/tv_notification_follower_name" />

        <ImageView
            android:id="@+id/tv_notification_followers_arrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/tv_notification_follower_arrow"
            android:layout_marginEnd="8dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="@color/colorAccent"
            android:src="@drawable/ic_right"
            app:layout_constraintBottom_toTopOf="@+id/tv_notification_followers_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_notification_followers_name"
            tools:text="15th Jan 2019" />

        <TextView
            android:id="@+id/tv_notification_followers_designation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/tv_notification_follower_designation"
            android:textColor="@color/colorAccent"
            app:layout_constraintStart_toStartOf="@+id/tv_notification_followers_name"
            app:layout_constraintTop_toBottomOf="@+id/tv_notification_followers_name" />


        <TextView
            android:id="@+id/tv_notification_followers_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/tv_notification_follower_location"
            android:textColor="@color/colorAccent"
            app:layout_constraintStart_toStartOf="@+id/tv_notification_followers_designation"
            app:layout_constraintTop_toBottomOf="@+id/tv_notification_followers_designation" />

    </android.support.constraint.ConstraintLayout>
</android.support.v7.widget.CardView>
