<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginEnd="@dimen/margin_medium"
    android:layout_marginStart="@dimen/margin_medium"
    app:cardBackgroundColor="@color/background_color"
    app:cardCornerRadius="@dimen/eventdetails_corner_radis"
    app:cardElevation="@dimen/eventdetails_corner_radis"
    app:cardMaxElevation="@dimen/eventdetails_corner_radis"
    app:cardUseCompatPadding="true">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/margin_medium">


        <TextView
            android:id="@+id/tv_notifiation_message"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_medium"
            android:layout_marginStart="@dimen/margin_medium"
            android:layout_marginTop="@dimen/margin_medium"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/font_20sp"
            app:layout_constraintBottom_toTopOf="@+id/tv_notifiation_timestamp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/tv_notification_msg" />

        <TextView
            android:id="@+id/tv_notifiation_timestamp"
            android:layout_width="@dimen/notification_width"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium"
            android:textAlignment="center"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/font_18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_notifiation_message"
            tools:text="@string/tv_notification_timestamp" />

        <ImageView
            android:id="@+id/iv_delete_notification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_medium"
            android:layout_marginTop="@dimen/margin_medium"
            android:contentDescription="@string/iv_delete_notification"
            android:src="@drawable/ic_recycle"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/tv_notifiation_timestamp"
            app:layout_constraintStart_toEndOf="@+id/tv_notifiation_timestamp"
            app:layout_constraintTop_toBottomOf="@+id/tv_notifiation_message" />

    </android.support.constraint.ConstraintLayout>
</android.support.v7.widget.CardView>
